Modernise codebase with Java 17 features and NIO.2 APIs
Convert LogRequest and TriggerCommand to records, replace legacy
Paths.get/FileWriter with Path.of/Files NIO.2 equivalents, use
Duration.ofMinutes for self-documenting constant, convert long usage
string to text block, and batch CORS method registration with List.of.